--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.8",
+    "sweetalert2": "^11.7.31",
+    "sweetalert2-react": "^0.8.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -39,5 +41,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.3.3"
   }
 }
